generarion del JAR

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/bdnotas
-spring.datasource.username=postgres
-spring.datasource.password=sistemas
+spring.datasource.url=jdbc:postgresql://dbnotas.postgres.database.azure.com:5432/bdnotas
+spring.datasource.username=postgres@dbnotas
+spring.datasource.password=c0n0svrSC753
 server.port=8080
