--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+task stage(dependsOn: ['clean', 'build'])
+stage.mustRunAfter clean
+
